added more pics

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>KAY'S KITCHEN</title>
 </head>
 <body>
+    <h1>KAY'S KITCHEN</h1>
  <ul>
-    <li> Home</li>
-    <li> Food </li>
-    <li> NonFood</li>
- </ul> 
+    <li><a href="#"> Home</a></li>
+    <li><a href="#"> Food </a></li>
+    <li> <a href="#"> Nonfood </a></li>
  <div>
     <input>  <button>Search</button>  </input>
  </div>
- <div>
+</ul> 
+ 
+ <div class="intro">
+    <h2>
+        Welcome to  Kay's Kitchen
+    </h2>
     <p> 
         Lorem ipsum dolor sit amet, ea fierent scaevola mandamus his. Eu quot meliore commune vim, etiam luptatum ad eam, vitae eripuit forensibus vix cu. In quo alienum splendide, reque utinam accusamus id vis, has eros dolore eirmod no. Soluta aperiam recteque no sea, ne eros clita eos. Est torquatos disputationi ut.
 
@@ -25,7 +30,9 @@
 <div  class="pancake">
     <img  src="./assets/pancakees.jpeg">
 </div>
-
+<div class="corndog">
+    <img src="./assets/koreancorndog.webp" alt="korean corndog with ketchup">
+</div>
  <button> click</button>
  <button> click </button>
  <button>  click </button>
