--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
+    <script src="./script.js"></script>
     <title>KAY'S KITCHEN</title>
 </head>
+
 <body>
     <h1>KAY'S KITCHEN</h1>
- <ul>
-    <li><a href="#"> Home</a></li>
-    <li><a href="#"> Food </a></li>
-    <li> <a href="#"> Nonfood </a></li>
- <div>
-    <input>  <button>Search</button>  </input>
- </div>
-</ul> 
- 
- <div class="intro">
-    <h2>
-        Welcome to  Kay's Kitchen
-    </h2>
-    <p> 
-        Lorem ipsum dolor sit amet, ea fierent scaevola mandamus his. Eu quot meliore commune vim, etiam luptatum ad eam, vitae eripuit forensibus vix cu. In quo alienum splendide, reque utinam accusamus id vis, has eros dolore eirmod no. Soluta aperiam recteque no sea, ne eros clita eos. Est torquatos disputationi ut.
+    <ul>
+        <li><a href="#"> Home</a></li>
+        <li><a href="#"> Food </a></li>
+        <li> <a href="#"> Nonfood </a></li>
+        <div>
+            <input> <button>Search</button> </input>
+        </div>
+    </ul>
 
-    </p>
- </div>
-<div  class="pancake">
-    <img  src="./assets/pancakees.jpeg">
-</div>
-<div class="corndog">
-    <img src="./assets/koreancorndog.webp" alt="korean corndog with ketchup">
-</div>
- <button> click</button>
- <button> click </button>
- <button>  click </button>
- <button>  click </button>
+    <div class="intro">
+        <h2>
+            Welcome to Kay's Kitchen
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet, ea fierent scaevola mandamus his. Eu quot meliore commune vim, etiam luptatum ad
+            eam, vitae eripuit forensibus vix cu. In quo alienum splendide, reque utinam accusamus id vis, has eros
+            dolore eirmod no. Soluta aperiam recteque no sea, ne eros clita eos. Est torquatos disputationi ut.
+
+        </p>
+    </div>
+    <div class="pancake">
+        <img src="./assets/pancakees.jpeg">
+    </div>
+    <div>
+        <p> Veritus tacimates democritum eos ut, eam ad corpora deserunt, et qui vidisse eligendi. Ad accumsan percipit
+            nec, sed justo postea singulis eu, sea eu vocent nominavi. Mundi essent apeirian mei cu, ei vivendum
+            temporibus ius. Errem omnes indoctum ex vis. Diam putent omittantur mea id, mea adhuc vitae denique ut,
+            tation molestiae adversarium ut ius. Ferri vivendum ut usu, ne mei impetus oblique disputationi. Vis
+            indoctum sadipscing ut, nam ea tollit animal accommodare.
+        </p>
+    </div>
+    <div class="corndog">
+        <img src="./assets/koreancorndog.webp" alt="korean corndog with ketchup">
+    </div>
+    <button> click</button>
+    <button> click </button>
+    <button> click </button>
+    <button> click </button>
 </body>
-
-<footer> 
+<div>
+    <p> <a href="#">CONTACT US</p> </a>
+</div>
+<footer>
     &copy 2022 KAY'S KITCHEN
 </footer>
+
 </html>
