--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="./script.js"></script>
     <title>KAY'S KITCHEN</title>
 </head>
 
 <body>
-    <h1>KAY'S KITCHEN</h1>
-    <ul>
-        <li><a href="#"> Home</a></li>
-        <li><a href="#"> Food </a></li>
+    <ul>   
+         <h1>KAY'S KITCHEN</h1>
+
+        <li><a href="./index.html"> Home</a></li>
+        <li><a href="./food.html"> Food </a></li>
         <li> <a href="#"> Nonfood </a></li>
         <div>
             <input> <button>Search</button> </input>
@@ -52,7 +55,7 @@
     <button> click </button>
 </body>
 <div>
-    <p> <a href="#">CONTACT US</p> </a>
+    <p> <a href="./contact.html">CONTACT US</p> </a>
 </div>
 <footer>
     &copy 2022 KAY'S KITCHEN
