added cards to food page

--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="./style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me </title>
 </head>
 <body>
-    
+    <ul>   
+        <h1><KAY'S KITCHEN></h1>
+
+       <li><a href="./index.html"> Home</a></li>
+       <li><a href="./food.html"> Food </a></li>
+       <li> <a href="#"> Nonfood </a></li>
+       <div>
+           <input> <button>Search</button> </input>
+       </div>
+   </ul>
+
+
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      
 </body>
 </html>
