--- a/food.html
+++ b/food.html
@@ -22,11 +22,11 @@
    </ul>
 
    <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="./assets/pizza.jpeg" class="pizza-img" alt="pizza">
   
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">Pizza</h5>
+      <p class="card-text">Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives, mozzarella or other cheese, and many other ingredients, baked quickly.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
