updated contact form

--- a/food.html
+++ b/food.html
@@ -54,6 +54,14 @@
     <p class="card-text">  Spaghetti is a long, thin, solid, cylindrical pasta. It is a staple food of traditional Italian cuisine. Like other pasta, spaghetti is made of milled wheat and water and sometimes enriched with vitamins and minerals</p>
     <a href="https://www.google.com/search?q=spaghetti&oq=spaghetti&aqs=chrome..69i57j46i433i512j46i131i433i512j0i131i433i512j46i131i433i512l3j69i65.2225j0j7&sourceid=chrome&ie=UTF-8" class="btn btn-primary">SPAGHETTI ME</a>
   </div>
+
+  <div class="card">
+    <img src="./assets/italianpastry.jpeg" class="pastry-img" alt="italianpastry">
+  <div class="card-body">
+    <h5 class="card-title">Italian Pastry</h5>
+    <p class="card-text">The term dessert can apply to many confections, such as biscuits, cakes, cookies, custards, gelatins, ice creams, pastries, pies, puddings, macaroons, sweet soups, tarts, and fruit salad. Fruit is also commonly found in dessert courses because of its naturally occurring sweetness.</p>
+    <a href="https://www.google.com/search?q=italian+pastry&sxsrf=ALiCzsbNb637Z-XY_mV9hqXimoRxONf44Q%3A1658943118693&ei=jnbhYo2DKZvXptQP2-iwgAc&oq=italian++P&gs_lcp=Cgdnd3Mtd2l6EAMYADIECCMQJzIICAAQgAQQsQMyCggAEIAEEIcCEBQyBQgAEIAEMgQIABBDMgQILhBDMgcIABDJAxBDMgUIABCABDIICAAQgAQQsQMyCAgAEIAEELEDOgcIABBHELADOgoIABBHELADEMkDOgcIABCwAxBDOgoIABDkAhCwAxgBOgwILhDIAxCwAxBDGAI6CAguEIAEELEDOggIABCABBDJAzoFCAAQkgNKBAhBGABKBAhGGAFQhwNY_wlgqBVoAXABeACAAbcBiAGaBZIBAzAuNZgBAKABAcgBE8ABAdoBBggBEAEYCdoBBggCEAEYCA&sclient=gws-wiz" class="btn btn-primary">PASTRY ME</a>
+  </div>
 </div>
 </body>
 </html>
